// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Listbox /> should render with no highlighted <Option /> 1`] = `
<option
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  id="listbox-item-0"
  value="option A"
>
  option A
</option>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 2`] = `
<option
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  id="listbox-item-1"
  value="option B"
>
  option B
</option>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 3`] = `
<option
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  id="listbox-item-2"
  value="option C"
>
  option C
</option>
`;
